...
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="connectionTabBar"/>
                        </userDefinedRuntimeAttributes>
                    </tabBar>
...
                                <rect key="frame" x="119" y="762" width="176" height="32"/>
                                <segments>
                                    <segment title="Day"/>
                                    <segment title="Week"/>
                                    <segment title="Month"/>
                                </segments>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="filterController"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                                        <nil key="highlightedColor"/>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="selectedTimeValue"/>
                                                        </userDefinedRuntimeAttributes>
                                                    </label>
...
                                                        <state key="normal" title="Edit"/>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="editDateButton"/>
                                                        </userDefinedRuntimeAttributes>
                                                        <connections>
...
                                                        <state key="normal" image="arrow.2.circlepath" catalog="system"/>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="refreshMap"/>
                                                        </userDefinedRuntimeAttributes>
                                                        <connections>
...
                    <tabBarItem key="tabBarItem" title="Map" image="map" catalog="system" landscapeImage="map" largeContentSizeImage="map" selectedImage="map" id="Wab-Wp-qPC">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="mapButtonItem"/>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
...
