...
    @IBAction func openDatePicker(_ sender: Any) {
        var pickedDate: Date?
        let minDate = calendar.date(byAdding: .year, value: -5, to: Date()) // max 5 years ago
        
        let alert = UIAlertController(style: .alert, title: nil)
        alert.addDatePicker(mode: .date, date: selectedDate, minimumDate: minDate, maximumDate: Date()) { pickedDate = $0 }
        alert.addAction(title: "Done", style: .default, handler: { _ in
            if let _ = pickedDate {
                self.selectedDate = pickedDate!
                self.currentDateLabel.text = self.formatter.string(from: self.selectedDate)
                self.getEvents(until: self.selectedDate, during: self.duration)
            }
        })
...
