...
    var contributePermissions: [String]?
    var serviceName: String?
    var connection: Connection?
    
    override func viewDidLoad() {
        if let username = utils.extractUsername(apiEndpoint: connection?.getApiEndpoint() ?? ""), let service = serviceName {
            let logoutButton = UIBarButtonItem(title: "\(service) - \(username)", style: .plain, target: self, action: #selector(logout))
            logoutButton.accessibilityIdentifier = "logoutButton"
            self.navigationItem.rightBarButtonItem = logoutButton
        }
        
        navigationItem.hidesBackButton = true
    }
...
